# perplexity-chatgpt-cli

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  test_main.py
perplexity_cli/cli/: main.py
perplexity_cli/core/: client.py  config.py
src/: main.py
tests/: test_main.py
tests/cli/: test_main.py
tests/core/: test_client.py  test_config.py
